experimental compact storage for JPS Cache (part 5 - store OutputToTargetMapping)
GitOrigin-RevId: 36feec030cee2cbd5554a4fc0a3b80dd74ea764c